TOB-1935: Endrer kontrakt for hent-person fordi tjensten skal kunne gi 3 stk kontaktadresser og 2 stk oppholdsadresser. Har også tatt i bruk secure-logs.
