# spec/sokos-pdl-proxy-v1-swagger2.json
@@ -130,12 +130,20 @@
           "$ref": "#/definitions/Bostedsadresse"
         },
         "kontaktadresse": {
-          "type": "object",
-          "$ref": "#/definitions/Kontaktadresse"
+          "type": "array",
+          "maxItems": 3,
+          "items": {
+            "$ref": "#/definitions/Kontaktadresse"
+          },
+          "description": "For å avhjelpe begrensninger på stormaskin, settes en maks her som tilsvarer det som teoretisk kan komme fra PDL"
         },
         "oppholdsadresse": {
-          "type": "object",
-          "$ref": "#/definitions/Oppholdsadresse"
+          "type": "array",
+          "maxItems": 2,
+          "items": {
+            "$ref": "#/definitions/Oppholdsadresse"
+          },
+          "description": "For å avhjelpe begrensninger på stormaskin, settes en maks her som tilsvarer det som teoretisk kan komme fra PDL"
         }
       },
       "title": "Person",
